# realtime-edge-detection-android

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/prerana/edgedetection/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processor.cpp  opencv_processor.h
app/src/main/java/com/prerana/edgedetection/: MainActivity.kt
app/src/main/java/com/prerana/edgedetection/camera/: CameraHandler.kt
app/src/main/java/com/prerana/edgedetection/gl/: GLRenderer.kt
app/src/main/java/com/prerana/edgedetection/nativeinterface/: NativeProcessor.kt
app/src/main/java/com/prerana/edgedetection/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/prerana/edgedetection/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
web/src/: viewer.ts
